improve support for -XX:+PrintGCApplicationStoppedTime for G1 algorithm
- parse "application stopped" events without timestamp
- guess timestamp from previous event